crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-crabbing-interpreters__tests__cases__type_error_with_function_call.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - crabbing-interpreters/tests/cases/type_error_with_function_call.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @3) [] []
      (block))
   (expr (+ (call +4 (global f @3)) "f()")))

----- stderr -----
